Use CSS and jQuery to fix placeholder alignments

--- a/css/style.css
+++ b/css/style.css
@@ -62,6 +62,27 @@ body * {
   max-width: 100%;
   height: auto;
 }
+#main .page .icon {
+}
+#main .page .icon img {
+  padding: 4px;
+  border: 1px solid #ccc;
+  border-radius: 3px;
+}
+#main .page .placeholder {
+  display: inline-block;
+  background: #fff;
+  border: 1px solid #ccc;
+  margin: 4px;
+  height: 80px;
+  width: 80px;
+  text-align: center;
+  vertical-align: middle;
+}
+#main .page .placeholder img {
+  border: none;
+  vertical-align: middle;
+}
 
 /* footer */
 #main .footer {
